--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
         def nav_version = "2.3.0-alpha06"
@@ -18,6 +17,7 @@ buildscript {
     }
     ext {
         def version_navigation = "2.3.0-alpha06"
+        version_coroutine = "1.3.6"
     }
 }
 
@@ -25,7 +25,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
